# database-generic

./: .gitignore  README.md  cabal.project  database-generic.cabal  default.nix  packages.nix  shell.nix  stack.yaml
.github/workflows/: test.yaml
.stack-work/: stack.sqlite3
database-generic/: CHANGELOG.md  LICENSE  database-generic.cabal
database-generic-hdbc/: CHANGELOG.md  database-generic.cabal
database-generic-hdbc/src/Database/Generic/: HDBC.hs
database-generic-server/: CHANGELOG.md  LICENSE  database-generic-server.cabal  stack.yaml
database-generic-server-api/: CHANGELOG.md  database-generic-server-api.cabal
database-generic-server-api/src/Database/Generic/Server/: API.hs
database-generic-server/src/Database/Generic/: Server.hs
database-generic-server/tutorial/: Main.hs
database-generic/src/Database/: Generic.hs
database-generic/src/Database/Generic/: Class.hs  Database.hs  Entity.hs  Operations.hs  Prelude.hs  Serialize.hs  Statement.hs  Transaction.hs
database-generic/src/Database/Generic/Entity/: Bytes.hs  DbColumns.hs  DbTypes.hs  EntityName.hs  FieldName.hs  FromDb.hs  FromSql.hs  PrimaryKey.hs  SqlColumnTypes.hs  SqlColumns.hs  SqlTypes.hs  ToDb.hs  ToSql.hs
database-generic/src/Database/Generic/Statement/: CreateTable.hs  Delete.hs  Fields.hs  Insert.hs  Limit.hs  NoType.hs  NoTypeInfo.hs  Order.hs  OrderBy.hs  Output.hs  Returning.hs  Select.hs  Tx.hs  Type.hs  Values.hs  Where.hs
database-generic/test/: Main.hs
database-generic/test/Database/Generic/Test/: Statement.hs
database-generic/tutorial/: Main.hs
example/: Main.hs
nix/: sources.json
src/: README.md
src/Database/: Generic.hs
src/Database/Generic/: Class.hs  Database.hs  Entity.hs  Field.hs  Internal.hs  Operations.hs  Output.hs  Prelude.hs  Serialize.hs  Statement.hs  Table.hs  Transaction.hs
src/Database/Generic/Entity/: EntityName.hs  Field.hs  FieldName.hs  FromSql.hs  PrimaryKey.hs  SqlColumns.hs  SqlFieldTypes.hs  SqlFields.hs  SqlTypes.hs  SqlValue.hs  ToSql.hs
src/Database/Generic/Statement/: CreateTable.hs  Delete.hs  Fields.hs  Insert.hs  Limit.hs  OrderBy.hs  Output.hs  Projection.hs  Returning.hs  Select.hs  Type.hs  Where.hs
src/Database/Generic/Statement/Type/: OneOrMany.hs
test/: Main.hs
test/Database/Generic/Test/: Statement.hs
tutorial/: Main.hs  tutorial.cabal
tutorial/tutorial/: Main.hs
