cabal-version:      3.4
name:               database-generic
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             jerbaroo
maintainer:         jerbaroo.work@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Database.Generic.Class,
                      Database.Generic.Database,
                      Database.Generic.Entity,
                      Database.Generic.Entity.FromSql,
                      Database.Generic.Entity.SqlTypes,
                      Database.Generic.Entity.ToSql,
                      Database.Generic.Operations,
                      Database.Generic.Prelude,
                      Database.Generic.Statement,
                      Database.Generic.Transaction,
    build-depends:    base,
                      comonad,
                      convertible,
                      extra,
                      generics-eot,
                      HDBC,
                      mtl,
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
                      AllowAmbiguousTypes,
                      BlockArguments,
                      DefaultSignatures,
                      DerivingStrategies,
                      DuplicateRecordFields,
                      FunctionalDependencies,
                      LambdaCase,
                      NoImplicitPrelude,
                      OverloadedRecordDot,
                      RecordWildCards,
                      TypeFamilies,

executable database-generic-example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      bytestring,
                      database-generic,
                      HDBC,
                      HDBC-postgresql,
                      mtl,
                      postgres-options,
                      resource-pool,
    hs-source-dirs:   example
    default-language: GHC2021

test-suite database-generic-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      database-generic
    hs-source-dirs:   test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
