cabal-version:      3.4
name:               database-generic-hdbc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jeremy Barisch-Rooney
maintainer:         jerbaroo.work@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
    import:           warnings
    exposed-modules:  Database.Generic.HDBC
    build-depends:    base,
                      database-generic,
                      HDBC,
    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions:
                      AllowAmbiguousTypes,
                      BlockArguments,
                      DataKinds,
                      DefaultSignatures,
                      DuplicateRecordFields,
                      FunctionalDependencies,
                      NoImplicitPrelude,
                      OverloadedRecordDot,
                      RecordWildCards,
                      TypeFamilies,
