cabal-version:      3.4
name:               database-generic
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jeremy Barisch-Rooney
maintainer:         jerbaroo.work@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
    import:           warnings
    exposed-modules:  Database.Generic,
                      Database.Generic.Class,
                      Database.Generic.Database,
                      Database.Generic.Entity.EntityName,
                      Database.Generic.Entity.FieldName,
                      Database.Generic.Entity.FromSql,
                      Database.Generic.Entity.PrimaryKey,
                      Database.Generic.Entity.SqlTypes,
                      Database.Generic.Entity.SqlColumns,
                      Database.Generic.Entity.ToSql,
                      Database.Generic.Operations,
                      Database.Generic.Prelude,
                      Database.Generic.Serialize,
                      Database.Generic.Statement,
                      Database.Generic.Statement.CreateTable,
                      Database.Generic.Statement.Delete,
                      Database.Generic.Statement.Fields,
                      Database.Generic.Statement.Insert,
                      Database.Generic.Statement.Limit,
                      Database.Generic.Statement.NoType,
                      Database.Generic.Statement.OrderBy,
                      Database.Generic.Statement.Output,
                      Database.Generic.Statement.Returning,
                      Database.Generic.Statement.Select,
                      Database.Generic.Statement.Tx,
                      Database.Generic.Statement.Type,
                      Database.Generic.Statement.Type.OneOrMany,
                      Database.Generic.Statement.Values,
                      Database.Generic.Statement.Where,
                      Database.Generic.Transaction,
    build-depends:    aeson,
                      base,
                      bytestring,
                      comonad,
                      convertible,
                      extra,
                      from-sum,
                      generics-eot,
                      HDBC,
                      mtl,
                      transformers,
                      witch,
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
                      AllowAmbiguousTypes,
                      BlockArguments,
                      DataKinds,
                      DefaultSignatures,
                      DerivingStrategies,
                      DuplicateRecordFields,
                      FunctionalDependencies,
                      LambdaCase,
                      NoImplicitPrelude,
                      OverloadedRecordDot,
                      RecordWildCards,
                      TypeFamilies,

test-suite database-generic-test
    import:           warnings
    main-is:          Main.hs
    other-modules:    Database.Generic.Test.Statement
    build-depends:    base,
                      database-generic,
                      tasty,
                      tasty-hunit,
                      tasty-smallcheck,
                      witch
    hs-source-dirs:   test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
