cabal-version:      3.4
name:               tutorial
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jeremy Barisch-Rooney
maintainer:         jerbaroo.work@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-name-shadowing

executable tutorial
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      bytestring,
                      database-generic,
                      database-generic-hdbc,
                      database-generic-server,
                      HDBC,
                      HDBC-postgresql,
                      mtl,
                      postgres-options,
                      witch,
    hs-source-dirs:   tutorial
    default-language: GHC2024
